cert-manager/example-one/02.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: nginx
          name: my-container-1
          ports:
            - name: http
              containerPort: 80
