cert-manager/example-one/03.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-1
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
  selector:
    app: my-app
