cert-manager/example-one/04.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-1
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
spec:
  ingressClassName: nginx
  rules:
    - host: devopswithkube.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: my-service-1
                port:
                  number: 80
  tls:
    - hosts:
        - devopswithkube.com
      secretName: devopswithkube-com
